# torch-sandbox

./: .gitignore  README.md  pyproject.toml
basics/: tensor-1.py
layers/: nn_embedding.py  nn_norm.py  nn_softmax.py
models/: lin_reg_debug.py  lin_reg_ds.py  nn_dropout.py  nn_linear.py  nn_relu.py  test_lin_reg_ds.py
models/deep_learning/: README_lightning.md  dwe.py  dwe_lightning.py  example_usage.py  example_usage_lightning.py  test_lightning.py
models/linear_regression/: example_usage.py  lin_reg.py  line_reg_temp.py  linear_regression_model.py
models/logistic_regression/: example_usage.py  lgr.py
python/: operations.py  tensor-1.py  tensor-calc-graph.py
