[project]
name = "torch-sandbox"
version = "0.1.0"
description = "playing with ml concepts and pytorch"
authors = [
    {name = "Sina Sadeghi",email = "sadeq.s502@gmail.com"}
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "torch (>=2.11.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pytorch-lightning (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
